--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -19,7 +19,7 @@ displayBlock="true">
 					<f:ShellBar core:require="{ Helper: 'sap/ui/demo/todo/util/Helper' }" 
 					title="{i18n>TITLE}"
 					 homeIcon="{:= Helper.resolvePath('./img/logo.png') }" />
-				</customHeader>
+</customHeader>
 
    <content>
     
@@ -51,10 +51,12 @@ displayBlock="true">
        <Title text="Lista de Tarefas" />
       </HBox>
       
-            <FlexBox
-       alignItems="Center"
-       justifyContent="SpaceBetween"
-       class="sapUiTinyMarginBottom">
+    <FlexBox
+    id="myFlexBox"
+    alignItems="Center"
+    width="100%"
+    justifyContent="SpaceBetween"
+    class="sapUiTinyMarginBottom containerForm">
        
        <Input
         id="addtaskItemInput"
@@ -88,35 +90,48 @@ displayBlock="true">
         text="Adicionar"
         icon="sap-icon://add"
         press=".onPress"
-        type="Emphasized">
+        type="Emphasized"
+        class="sapUiSmallMarginEnd">
         <layoutData>
          <FlexItemData growFactor="1" />
         </layoutData>
        </Button>
       </FlexBox>
       
-      <SegmentedButton selectedKey="all" selectionChange=".onFilter" class="sapUiTinyMarginBottom">        <items>
-        <SegmentedButtonItem width="10rem" text="Todos " key="all" id="all"/>
-        <SegmentedButtonItem width="10rem" text="Abertos " key="active" id="active"/>
-        <SegmentedButtonItem width="10rem" text="Concluídos " key="completed" id="completed" />
-       </items>
-      </SegmentedButton>
+      <SegmentedButton selectedKey="all" 
+    selectionChange=".onFilter" 
+    class="segmentedResponsive sapUiTinyMarginBottom">
+  <items>
+    <SegmentedButtonItem width="10rem" text="Todos" key="all" id="all"/>
+    <SegmentedButtonItem width="10rem" text="Abertos" key="active" id="active"/>
+    <SegmentedButtonItem width="10rem" text="Concluídos" key="completed" id="completed"/>
+  </items>
+</SegmentedButton>
+
+<Select selectedKey="all" 
+    class="selectResponsive sapUiTinyMarginBottom"
+    change=".onFilter">
+    <core:Item key="all" text="Todos"/>
+    <core:Item key="active" text="Abertos"/>
+    <core:Item key="completed" text="Concluídos"/>
+</Select>
 
             <List
        id="todoList"
        items="{/todos}"
        showSeparators="None"
        mode="None"
+       class="containerForm"
        noDataText="Nenhuma tarefa encontrada.">
        
-       <CustomListItem type="Inactive" class="noFocusItem" >
+       <CustomListItem type="Inactive" class=" line noFocusItem" >
                 <HBox 
-         alignItems="Center" 
-         justifyContent="SpaceBetween" 
-         class="sapUiSmallPaddingBeginEnd sapUiSmallMarginTopBottom">
+         class="sapUiSmallPaddingBeginEnd sapUiSmallMarginTopBottom responsiveFlex"
+  alignItems="Center"
+  justifyContent="SpaceBetween">
          
          <HBox alignItems="Center">
-          <CheckBox selected="{completed}" class="sapUiTinyMarginEnd"/>
+          <CheckBox selected="{completed}"  class="sapUiTinyMarginEnd"/>
           <Text text="{task}" class="sapUiTinyMarginEnd lisText" wrapping="true"/>
           <core:Fragment
            fragmentName="sap.ui.demo.todo.view.fragment.TpPriority"
